--- a/5.html
+++ b/5.html
@@ -1,93 +1,30 @@
-!DOCTYPE html>
-<meta charset="utf-8">
-<div id='heatmap'></div>
-<style>
+<!DOCTYPE html>
 
-.rect {
-  shape-rendering: crispEdges;
-}
+<svg id= "A" ></svg>
 
-body {
-  font: 10px sans-serif;
-}
+<script src="https://d3js.org/d3.v5.js"></script>
 
-</style>
-<body>
-<script src="http://d3js.org/d3.v3.js"></script>
 <script>
 
-var data = [
-    {score: 0.5, row: 0, col: 0},
-    {score: 0.7, row: 0, col: 1},
-    {score: -0.9, row: 0, col: 2},
-    {score: 0.3, row: 0, col: 3},
-    {score: 1.2, row: 1, col: 0},
-    {score: 0.4, row: 1, col: 1},
-    {score: -0.8, row: 1, col: 2},
-    {score: -0.4, row: 1, col: 3},
-    {score: 0.5, row: 2, col: 0},
-    {score: -0.5, row: 2, col: 1},
-    {score: 0.7, row: 2, col: 2},
-    {score: 0.15, row: 2, col: 3},
-    {score: 0.1, row: 3, col: 0},
-    {score: 0.8, row: 3, col: 1},
-    {score: 1.0, row: 3, col: 2},
-    {score: -1, row: 3, col: 3}
-];
+var svg = d3.select("#A")
+    // Create a scale: transform value in pixel
+var x = d3.scaleLinear()
+    .domain([0, 100])         // This is the min and the max of the data: 0 to 100 if percentages
+    .range([0, 250]);       // This is the corresponding value I want in Pixel
 
-//height of each row in the heatmap
-//width of each column in the heatmap
-var gridSize = 50,
-    h = gridSize,
-    w = gridSize,
-    rectPadding = 60;
+svg
+    .append('g')
+    .attr("transform", "translate(10," + 100+ ")")
+    .call(d3.axisBottom(x));
 
-var colorLow = 'green', colorMed = 'black', colorHigh = 'red';
 
-var margin = {top: 20, right: 80, bottom: 30, left: 50},
-    width = 640 - margin.left - margin.right,
-    height = 380 - margin.top - margin.bottom;
 
-var colorScale = d3.scale.linear()
-     .domain([-1, 0, 1])
-     .range([colorLow, colorMed, colorHigh]);
 
-var svg = d3.select("#heatmap").append("svg")
-    .attr("width", width + margin.left + margin.right)
-    .attr("height", height + margin.top + margin.bottom)
-  .append("g")
-    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-
-var heatMap = svg.selectAll(".heatmap")
-    .data(data, function(d) { return d.col + ':' + d.row; })
-  .enter().append("svg:rect")
-    .attr("x", function(d) { return d.col * w; })
-    .attr("y", function(d) { return d.row * h; })
-    .attr("width", function(d) { return w; })
-    .attr("height", function(d) { return h; })
-    .style("fill", function(d) { return colorScale(d.score); })
-.on("mouseover", function(d) {
-  d3.select(this)
-    .style("stroke","white")
-    .attr("stroke-width",3)
-    this.parentNode.appendChild(this);
-    var xPosition = parseFloat(d3.select(this).attr("x"))+w/2;
-    var yPosition = parseFloat(d3.select(this).attr("y"))+h/2;
-svg.append("text")
-    .attr("id","tooltip")
-    .attr("x", xPosition)
-    .attr("y", yPosition)
-    .style("fill", "white")
-    .attr("text-anchor", "middle")
-    .attr("font-family", "sans-serif")
-    .attr("font-size", "12px")
-    .attr("font-weight", "bold")
-    .text(d.score);
-})
-.on("mouseout", function() {
-    d3.select("#tooltip").remove();
-    d3.select(this)
-    .style("stroke","none");
-});
-
+var y = d3.scaleLinear()
+        .domain([0, 100])         // This is the min and the max of the data: 0 to 100 if percentages
+        .range([200, 0]);       // This is the corresponding value I want in Pixel
+    svg
+      .append('g')
+      .attr("transform", "translate(50," + 0+ ")")
+      .call(d3.axisLeft(y));
 </script>
